Crash: Sidebar (N) > Opening, Moving & Closing User Preferences Window #55882

Closed
opened 2018-07-10 10:10:14 +02:00 by Gibran Kaleel · 5 comments

System Information
Windows 10 Pro x64 - 1703
GTX 970 (398.36 WHQL)

Blender Version
Broken: 2.8 1112f49
Worked: 2.8 a6340a5

Short description of error
Sidebar (N) > Open/Move/Close User Preferences Window Crashes to Desktop.

Exact steps for others to reproduce the error

  1. Run Blender 2.8 1112f49
  2. Press N to show Sidebar.
  3. Expand View Object Types section. (Mouse over and scroll down to see entire list gives same result.)
  4. Open > User Pref. Window. (Edit > User Preferences)
  5. Move > User Pref. Window around a little. (Click & Drag on titlebar.)
  6. Close > User Pref. Window. (With 'X' button on titlebar.)
  7. Crashes to Desktop.

Edit: Reproducible even without Steps 2-3. Opening User Pref. Window, Click-Dragging it around and Closing it still Crashes to Desktop.

Tested

  1. Tried this about 20 times. 16/20 times happens immediately. (Soon as I hit the 'X' to close user pref. window and move mouse.) Other couple of times it took a few tries.
  2. Issue seems to be with moving around (click-drag) new windows? Tried, Window > New Window > Move window around > Press 'X' to close it. Crashed.
  3. But seems more frequent with User Pref. Window. (More reproducible.)
  4. It seems like a difficult crash to reproduce, but definitely crashes. And only started happening with this new commit. 1112f49

Please let me know if there is any more information I can provide to help. I don't have any screen-recording software installed or I would provide a video of the reproduction. But if required I can do it for you guys. :)

system-info.txt

**System Information** Windows 10 Pro x64 - 1703 GTX 970 (398.36 WHQL) **Blender Version** Broken: 2.8 1112f49 Worked: 2.8 a6340a5 **Short description of error** Sidebar (N) > Open/Move/Close User Preferences Window Crashes to Desktop. **Exact steps for others to reproduce the error** 1. Run Blender 2.8 1112f49 2. Press **N** to show Sidebar. 3. Expand **View Object Types** section. *(Mouse over and scroll down to see entire list gives same result.)* 4. Open > User Pref. Window. *(Edit > User Preferences)* 5. Move > User Pref. Window around a little. *(Click & Drag on titlebar.)* 5. Close > User Pref. Window. *(With 'X' button on titlebar.)* 6. Crashes to Desktop. **Edit:** Reproducible even without Steps 2-3. Opening User Pref. Window, Click-Dragging it around and Closing it still Crashes to Desktop. **Tested** 1. Tried this about 20 times. 16/20 times happens immediately. *(Soon as I hit the 'X' to close user pref. window and move mouse.)* Other couple of times it took a few tries. 2. Issue seems to be with moving around *(click-drag)* new windows? Tried, Window > New Window > Move window around > Press 'X' to close it. Crashed. 3. But seems more **frequent** with User Pref. Window. *(More reproducible.)* 4. It seems like a difficult crash to reproduce, but definitely crashes. And only started happening with this new commit. 1112f49 Please let me know if there is any more information I can provide to help. I don't have any screen-recording software installed or I would provide a video of the reproduction. But if required I can do it for you guys. :) [system-info.txt](https://archive.blender.org/developer/F3904636/system-info.txt)
Author

Added subscriber: @JonDoe286

Added subscriber: @JonDoe286

#55889 was marked as duplicate of this issue

#55889 was marked as duplicate of this issue
Gibran Kaleel changed title from Crash: Sidebar (N) > Expand View Object Types > Open/Move/Close User Preferences Window to Crash: Sidebar (N) > Opening, Moving & Closing User Preferences Window 2018-07-10 10:33:15 +02:00

This issue was referenced by 39b1842335

This issue was referenced by 39b1842335c8ed949b776993686fb27f090655e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @finnfiction

Added subscriber: @finnfiction
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55882
No description provided.