Fix T55882: crash closing user preferences window in some cases.